GNOME Bugzilla – Bug 614037
flacparse: Fix buffer refcount issue
Last modified: 2010-03-26 17:15:30 UTC
There is a small bug in flacparse with setting caps on a buffer with refcount > 1. Attaching a patch to fix this.
Created attachment 157196 [details] [review] flacparse: Fix buffer refcount issue When called from the GST_FLAC_PARSE_STATE_HEADERS case, gst_flac_parse_hand_headers() does a gst_buffer_set_caps() on a buffer with refcount > 1. This change handles this case by making the buffer metadata_Writable.
commit cc6c4ef00b73c9b8b468d2ad1cfadf64e896b068 Author: Arun Raghavan <arun.raghavan@collabora.co.uk> Date: Fri Mar 26 16:49:01 2010 +0000 flacparse: Fix buffer refcount issue When called from the GST_FLAC_PARSE_STATE_HEADERS case, gst_flac_parse_hand_headers() does a gst_buffer_set_caps() on a buffer with refcount > 1. This change handles this case by making the buffer metadata_Writable. https://bugzilla.gnome.org/show_bug.cgi?id=614037